[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/DronePopupDialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons/memory.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/speed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/cargo.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UpgradeView.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/ld53/ld52_def_xlarge.tres" type="DynamicFont" id=6]

[node name="DronePopupDialog" type="PopupDialog"]
margin_top = 100.0
margin_right = 400.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 600 )
script = ExtResource( 1 )
np_speed_upgrade_view = NodePath("MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer/SpeedUpgradeView")
np_cargo_upgrade_view = NodePath("MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer/CargoUpgradeView2")
np_memory_upgrade_view = NodePath("MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer/MemoryUpgradeView3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 590.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 6 )
text = "Drone"
align = 1

[node name="Separator" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 580.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 2 )

[node name="RouteContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 580.0
margin_bottom = 410.0
size_flags_vertical = 3

[node name="Separator2" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 580.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 2 )

[node name="UpgrtadeContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 580.0
margin_bottom = 574.0
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpgrtadeContainer"]
margin_top = 5.0
margin_right = 580.0
margin_bottom = 149.0
alignment = 1

[node name="SpeedUpgradeView" parent="MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 190.0
margin_bottom = 144.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
upgrade_name = "Speed"
upgrade_cost = 300
upgrade_current_level = 1
upgrade_max_level = 3
level_aquired_color = Color( 0.184314, 0.564706, 0.396078, 1 )
level_not_aquired_color = Color( 0.52549, 0.152941, 0.152941, 1 )

[node name="CargoUpgradeView2" parent="MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 194.0
margin_right = 385.0
margin_bottom = 144.0
size_flags_horizontal = 3
texture = ExtResource( 4 )
upgrade_name = "Max Cargo"
upgrade_cost = 100
upgrade_current_level = 1
upgrade_max_level = 4
level_aquired_color = Color( 0.184314, 0.564706, 0.396078, 1 )
level_not_aquired_color = Color( 0.52549, 0.152941, 0.152941, 1 )

[node name="MemoryUpgradeView3" parent="MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 389.0
margin_right = 580.0
margin_bottom = 144.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
upgrade_name = "Memory"
upgrade_cost = 300
upgrade_current_level = 1
upgrade_max_level = 3
level_aquired_color = Color( 0.184314, 0.564706, 0.396078, 1 )
level_not_aquired_color = Color( 0.52549, 0.152941, 0.152941, 1 )

[node name="Separator3" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_top = 578.0
margin_right = 580.0
margin_bottom = 580.0
rect_min_size = Vector2( 0, 2 )

[connection signal="about_to_show" from="." to="." method="_on_DronePopupDialog_about_to_show"]
[connection signal="Upgraded" from="MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer/SpeedUpgradeView" to="." method="_on_SpeedUpgradeView_Upgraded"]
[connection signal="Upgraded" from="MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer/CargoUpgradeView2" to="." method="_on_CargoUpgradeView2_Upgraded"]
[connection signal="Upgraded" from="MarginContainer/VBoxContainer/UpgrtadeContainer/HBoxContainer/MemoryUpgradeView3" to="." method="_on_MemoryUpgradeView3_Upgraded"]
